<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muhammed.masek.CheckoutItems"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView

                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/imageView"
                android:src="@mipmap/profile"
                android:contentDescription="@string/test"
                android:onClick="purchase"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/text"
                    android:text="@string/item1"/>

                <ImageView

                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:id="@+id/imageView1"
                    android:src="@mipmap/beige_dressweb"
                    android:contentDescription="@string/test"
                    />
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView

            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/imageView2"
            android:src="@mipmap/profile"
            android:contentDescription="@string/test"
            android:onClick="purchase"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text1"
                android:text="@string/item2"/>

            <ImageView

                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView3"
                android:src="@mipmap/pink_dressweb"
                android:contentDescription="@string/test"
                />
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:layout_gravity="center"
            android:text="@string/total"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/final_purchase_button"
                android:layout_weight="1"
                android:background="#44C5DD"/>
            <Button
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/share_button"
                android:layout_weight="1"
                android:background="#44F5DD"/>

        </LinearLayout>
</LinearLayout>

</ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button"
            android:layout_gravity="left"
            android:background="#4455DD"
            android:onClick="home"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_button"
            android:layout_gravity="center"
            android:background="#4405DD"
            android:onClick="checkout"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/profile_button"
            android:layout_gravity="right"
            android:background="#4455DD"
            android:onClick="profile"/>


    </LinearLayout>


</LinearLayout>
