<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.muhammed.masek.PurchaseItem"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <HorizontalScrollView
        android:id = "@+id/scrollHor"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="420dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:id="@+id/imageView"
                    android:src="@mipmap/beige_dressweb"
                    android:contentDescription="@string/test"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_button"
                    android:id="@+id/add"
                    android:layout_gravity="center"
                    android:background="#4455DD"
                    android:onClick="addToCart"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:id="@+id/imageView1"
                    android:src="@mipmap/pink_dressweb"
                    android:contentDescription="@string/test"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_button"
                    android:id="@+id/add1"
                    android:layout_gravity="center"
                    android:background="#4455DD"
                    android:onClick="addToCart"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView

                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:id="@+id/imageView2"
                    android:src="@mipmap/yellow_dressweb"
                    android:contentDescription="@string/test"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_button"
                    android:id="@+id/add2"
                    android:layout_gravity="center"
                    android:background="#4455DD"
                    android:onClick="addToCart"/>

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button"
            android:layout_gravity="left"
            android:background="#4455DD"
            android:onClick="home"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_button"
            android:layout_gravity="center"
            android:background="#4455DD"
            android:onClick="checkout"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/profile_button"
            android:layout_gravity="right"
            android:background="#4455DD"
            android:onClick="profile"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
