<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="Account Name"
                android:onClick ="profileAccount"/>

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="History"
                android:onClick ="HistoryButton" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="Payment Options"
                android:onClick="Payment_Options"/>

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="Linked Accounts"
                android:onClick="Link_Button"/>

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:text="Delivery Address"
                android:onClick="Delivery_Button"/>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="1">
        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button"
            android:layout_gravity="left"
            android:background="#4455DD"
            android:onClick="home"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_button"
            android:layout_gravity="center"
            android:background="#4455DD"
            android:onClick="checkout"/>

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/profile_button"
            android:text="@string/profile_button"
            android:layout_gravity="right"
            android:background="#4405DD"
            android:onClick="profile"/>

    </LinearLayout>

</LinearLayout>
